{
  "version": 4,
  "terraform_version": "0.12.0",
  "serial": 74,
  "lineage": "c2f69c6f-28db-36fc-6447-456425b4df97",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terra_ec2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-074e2d6769f445be5",
            "arn": "arn:aws:ec2:us-west-1:214775806069:instance/i-04272666aa88f1fa3",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-04272666aa88f1fa3",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terra_vpc_test",
            "monitoring": false,
            "primary_network_interface_id": "eni-039b24260ef45ced1",
            "private_dns": "ip-10-0-54-152.us-west-1.compute.internal",
            "private_ip": "10.0.54.152",
            "public_dns": "ec2-54-215-191-197.us-west-1.compute.amazonaws.com",
            "public_ip": "54.215.191.197",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 0,
                "volume_id": "vol-045c01d76e2421b4c",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-07f5160061e48f790",
            "tags": {
              "Name": "terra_ec2_test"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-065593850f09c527f"
            ]
          },
          "depends_on": [
            "aws_key_pair.terra_vpc",
            "aws_security_group.terra_sg",
            "aws_subnet.terra_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terra_gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-051a303c97786365a",
            "owner_id": "214775806069",
            "tags": {
              "Name": "terra_gw"
            },
            "vpc_id": "vpc-05cca563a74d9be6f"
          },
          "depends_on": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terra_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0a80a2bb19b03d2da",
            "owner_id": "214775806069",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-051a303c97786365a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terra_rt"
            },
            "vpc_id": "vpc-05cca563a74d9be6f"
          },
          "depends_on": [
            "aws_internet_gateway.terra_gw",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web-public-rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-050a978bec5a3a5b3",
            "route_table_id": "rtb-0a80a2bb19b03d2da",
            "subnet_id": "subnet-07f5160061e48f790"
          },
          "depends_on": [
            "aws_route_table.terra_rt",
            "aws_subnet.terra_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terra_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:214775806069:security-group/sg-065593850f09c527f",
            "description": "Allow incoming HTTP Connections \u0026 SSH Access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-065593850f09c527f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terra_vpc_test",
            "name_prefix": null,
            "owner_id": "214775806069",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terra_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05cca563a74d9be6f"
          },
          "depends_on": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terra_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:214775806069:subnet/subnet-07f5160061e48f790",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.0.0/16",
            "id": "subnet-07f5160061e48f790",
            "map_public_ip_on_launch": false,
            "owner_id": "214775806069",
            "tags": {
              "Name": "terra_subs"
            },
            "vpc_id": "vpc-05cca563a74d9be6f"
          },
          "depends_on": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terra_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:214775806069:vpc/vpc-05cca563a74d9be6f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0042e527f7068925c",
            "default_route_table_id": "rtb-03eb9721f17ebdb99",
            "default_security_group_id": "sg-0362bc5d4b4ad5a10",
            "dhcp_options_id": "dopt-2382a844",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-05cca563a74d9be6f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03eb9721f17ebdb99",
            "owner_id": "214775806069",
            "tags": {
              "Name": "terra_vpc"
            }
          }
        }
      ]
    }
  ]
}